# backdocentes2

./: Cargo.toml
src/: main.rs  models.rs  routes.rs
src/auth/: models.rs  routes.rs
src/basic/: mod.rs  models.rs  routes.rs
src/basic/session/: mod.rs  models.rs  routes.rs
src/basic/session/competencies/: mod.rs  models.rs  routes.rs
src/basic/session/competencies/abilities/: mod.rs  models.rs  routes.rs
src/basic/session/competencies/abilities/criterion/: models.rs  routes.rs
src/basic/session/evaluation/: models.rs  routes.rs
src/basic/session/products/: models.rs  routes.rs
src/basic/students/: models.rs  routes.rs
src/links/: models.rs  routes.rs
