[package]
name = "backdocentes2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
shuttle-actix-web = "0.57.0"
shuttle-runtime = "0.57.0"
tokio = "1.48.0"

serde = { version = "1", features=["derive"] }
serde_json = "1"
serde_repr = "0.1"

# SQLx
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

thiserror = "2.0.17"
uuid = { version = "1", features=["v4","serde"] }
futures = "0.3.31"
derive_more = "2.0.1"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15.0"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
itertools = "0.14.0"
tempfile = "3.23.0"